--- a/AdventCalendar/Pages/Home.razor.css
+++ b/AdventCalendar/Pages/Home.razor.css
@@ -113,3 +113,9 @@ h1::after {
 .calendar-content i a {
     color: #333;
 }
+
+.xmas {
+    background: url(/images/xmas.jpg);
+    background-size: cover;
+    background-position: center;
+}
