Fix link path in Home.razor to use relative URL for post navigation

--- a/AdventCalendar/Pages/Home.razor
+++ b/AdventCalendar/Pages/Home.razor
@@ -43,7 +43,7 @@
                     <b>
                         @{
                             var titleContent = (article.Status == "Publish")
-                            ? (MarkupString)$"<a href=\"/post/{day}\">{article.Title}</a>"
+                            ? (MarkupString)$"<a href=\"./post/{day}\">{article.Title}</a>"
                             : (MarkupString)article.Title;
                         }
                         @titleContent
