Update background image path in Home.razor.css to use relative URL

--- a/AdventCalendar/Pages/Home.razor.css
+++ b/AdventCalendar/Pages/Home.razor.css
@@ -115,7 +115,7 @@ h1::after {
 }
 
 .xmas {
-    background: url(/images/xmas.jpg);
+    background: url(./images/xmas.jpg);
     background-size: cover;
     background-position: center;
 }
