--- a/AdventCalendar/Layout/MainLayout.razor
+++ b/AdventCalendar/Layout/MainLayout.razor
@@ -3,7 +3,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="/">Developer Advent Calendar</a>
+            <a href="./">Developer Advent Calendar</a>
         </div>
 
         <article class="content px-4">
