--- a/AdventCalendar/Pages/Home.razor.css
+++ b/AdventCalendar/Pages/Home.razor.css
@@ -4,6 +4,7 @@
     gap: 1px;
     max-width: 960px;
     margin: auto;
+    width: 100%;
 }
 
 .day, .weekday {
@@ -12,7 +13,7 @@
     font-size: 1em;
     background-color: #f9f9f9;
     min-height: 120px;
-    width: 144px;
+    width: 100%;
     position: relative;
 }
 
@@ -118,4 +119,20 @@ h1::after {
     background: url(./images/xmas.jpg);
     background-size: cover;
     background-position: center;
+}
+
+@media (max-width: 764px) {
+    .weekday {
+        display: none;
+    }
+    .calendar {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .day {
+        min-height: inherit;
+        padding: 20px 20px 18px;
+    }
+    .day.xmas {
+        min-height: 200px;
+    }
 }
