Add navigation links for previous and next posts

--- a/AdventCalendar/Layout/MainLayout.razor
+++ b/AdventCalendar/Layout/MainLayout.razor
@@ -4,6 +4,7 @@
     <main>
         <div class="top-row px-4">
             <a href="./">Developer Advent Calendar</a>
+            <SectionOutlet SectionName="AppBar" />
         </div>
 
         <article class="content px-4">
