--- a/AdventCalendar/Pages/Post.razor
+++ b/AdventCalendar/Pages/Post.razor
@@ -46,14 +46,18 @@
         }
     }
 
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnParametersSetAsync()
     {
+        await base.OnParametersSetAsync();
+
         // 前後の記事へのリンクを生成
         prevPostUrl = Day > 1 ? $"/post/{Day - 1}" : null;
         nextPostUrl = Day < 25 ? $"/post/{Day + 1}" : null;
 
         try
         {
+            initializingState = InitializingState.Loading;
+
             // GitHub raw リンクの組み立て
             var url = $"https://raw.githubusercontent.com/igjp-sample/AdventCalendar/main/content/{Day}.md";
 
